# C-Lab-1

./: CMakeLists.txt  segfault.c
Part1/: lab1.c
Part2/: driver1.c  driver2.c  linkedlist.c  linkedlist.h
